--- a/multi-columns.html
+++ b/multi-columns.html
@@ -13,6 +13,10 @@
         padding: 10px;
         margin: 0 0 1em 0;
       }
+      .container{
+        column-count: 2;
+        column-rule: 5px dotted rgb(79, 185, 227);
+      }
     </style>
   </head>
   <body>
