--- a/border-shadow-div.html
+++ b/border-shadow-div.html
@@ -28,18 +28,31 @@
         10px 10px 1px rgba(240, 46, 170, 0.3),
         15px 15px 1px rgba(240, 46, 170, 0.2),
         20px 20px 1px rgba(240, 46, 170, 0.1),
-        25px 25px 1px rgba(240, 46, 170, 0.05)
-        ;
-        
+        25px 25px 1px rgba(240, 46, 170, 0.05);
       }
 
       div:nth-child(2) {
+        box-shadow: 0px 5px 1px rgba(240, 46, 170, 0.4),
+        0px 10px 1px rgba(240, 46, 170, 0.3),
+        0px 15px 1px rgba(240, 46, 170, 0.2),
+        0px 20px 1px rgba(240, 46, 170, 0.1),
+        0px 25px 1px rgba(240, 46, 170, 0.05);
       }
 
       div:nth-child(3) {
+        box-shadow: -5px 5px 1px rgba(240, 46, 170, 0.4),
+        -10px 10px 1px rgba(240, 46, 170, 0.3),
+        -15px 15px 1px rgba(240, 46, 170, 0.2),
+        -20px 20px 1px rgba(240, 46, 170, 0.1),
+        -25px 25px 1px rgba(240, 46, 170, 0.05);
       }
 
       div:nth-child(4) {
+        box-shadow: 0px 5px 1px rgba(240, 46, 170, 0.4),
+        0px 10px 1px rgba(240, 46, 170, 0.3),
+        0px 15px 1px rgba(240, 46, 170, 0.2),
+        0px 20px 1px rgba(240, 46, 170, 0.1),
+        0px 25px 1px rgba(240, 46, 170, 0.05);
       }
 
       /* Escala de colores:
@@ -56,6 +69,12 @@
       /* Prolongación de cada capas de 3px. */
       div:nth-child(5) {
         background-color: #FFF;
+        box-shadow: 0px 0px 0px 3px blue,
+        0px 0px 0px 6px rgb(31, 193, 27),
+        0px 0px 0px 9px rgb(255, 217, 19),
+        0px 0px 0px 12px rgb(255, 156, 85),
+        0px 0px 0px 15px rgb(255, 85, 85);
+        ;
       }
 
       /* Escala de colores:
@@ -71,14 +90,27 @@
       */
       div:nth-child(6) {
         background-color: #FFF;
+        box-shadow: 0px 0px 0px 3px blue,
+        10px -10px 0px rgb(255, 255, 255),
+        10px -10px 0px 3px rgb(31, 193, 27),
+        20px -20px 0px rgb(255, 255, 255),
+        20px -20px 0px 3px rgb(255, 217, 19),
+        30px -30px 0px rgb(255, 255, 255),
+        30px -30px 0px 3px rgb(255, 156, 85),
+        40px -40px 0px rgb(255, 255, 255),
+        40px -40px 0px 3px rgb(255, 85, 85);
       }
 
       div:nth-child(7) {
         background-color: #FFF;
+        box-shadow: 1px 1px 10px grey,
+                    -1px 1px 10px grey;
       }
 
       div:nth-child(8) {
         background-color: #FFF;
+        box-shadow: 0px 1px 10px grey,
+                    -1px 1px 10px grey;
       }
       
     </style>
